--- a/13-07-2020/HomeWorkFlask/templates/product_page.html
+++ b/13-07-2020/HomeWorkFlask/templates/product_page.html
@@ -5,13 +5,13 @@
     <title>Опис товара</title>
 </head>
 <body>
-    <a href=/categories/{{product['name_categiry']}}>  <h3>Назад</h3> </a>
+    <a href="/categories/{{product['name_categiry']}}">  <h3>Назад до списку товарів</h3> </a>
     <h1>{{product['name']}}:</h1>
 
     <ul>
         <li> Ціна: {{product['price']}} </li>
-        <li> Колькість {{product['quantity']}} </li>
-        <li> Є {%if product['on_the_market'] %}
+        <li> Кількість {{product['quantity']}} </li>
+        <li> Товар {%if product['on_the_market'] %}
                      в продажу
                   {%else%}
                      на складі
